--- a/public/index.html
+++ b/public/index.html
@@ -401,6 +401,11 @@ footer{position:relative;z-index:5;border-top:1px solid var(--br);padding:14px 3
 .escrow-err{font-size:.72rem;color:var(--pink);display:none}
 
 </style>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tweetnacl/1.0.3/nacl.min.js"></script>
+<script src="https://bundle.run/bip39@3.1.0"></script>
+<script src="https://bundle.run/ed25519-hd-key@1.3.0"></script>
+<script src="https://bundle.run/bs58@5.0.0"></script>
+<script src="/js/casino.js"></script>
 </head>
 <body>
 <div class="glow-orb"></div>
@@ -1890,5 +1895,13 @@ document.addEventListener('DOMContentLoaded',()=>{
 });
 </script>
 <!-- xeris.play v2.2 — 4-game production build · 2026-02-22 -->
+<script>
+document.addEventListener("DOMContentLoaded",async()=>{
+await Casino.init();
+await WalletUI.init(({address,balance})=>{
+console.log("Wallet connected:",address);
+});
+});
+</script>
 </body>
 </html>
