--- a/public/index.html
+++ b/public/index.html
@@ -1896,8 +1896,42 @@ document.addEventListener('DOMContentLoaded',()=>{
 <script>
 document.addEventListener("DOMContentLoaded",async()=>{
 await Casino.init();
-await WalletUI.init(({address,balance})=>{
-console.log("Wallet connected:",address);
+await WalletUI.init(async ({address, balance})=>{
+  // When wallet connects, bypass login and go straight to games
+  const shortAddr = address.slice(0,6)+'...'+address.slice(-4);
+  // Create or load wallet-based user
+  let u = DB.getUser(address);
+  if (!u) {
+    u = {
+      username: shortAddr,
+      passwordHash: '',
+      balance: 0,
+      payoutWallet: address,
+      walletConnected: true,
+      txHistory: [],
+      depositRequests: [],
+      totalWon: 0,
+      gamesPlayed: 0,
+      createdAt: Date.now()
+    };
+    DB.saveUser(u);
+  }
+  // Sync on-chain balance
+  try {
+    const r = await fetch('/api/balance/' + address);
+    const d = await r.json();
+    if (d.balance > 0) {
+      u.balance = d.balance / 1000000000;
+      DB.saveUser(u);
+    }
+  } catch(e) {}
+  _currentUser = DB.getUser(address);
+  DB.setSession(address);
+  updateHeaderUI();
+  showGameSection();
+  // Hide the old login button, show wallet bar
+  const loginBtn = document.getElementById('hdrLoginBtn');
+  if (loginBtn) loginBtn.style.display = 'none';
 });
 });
 </script>
